<resources>
    <string name="empty"></string>
    <string name="close">Chiudi</string>
    <string name="confirm">Conferma</string>
    <string name="app_failure_setup">Inizializzazione dell\'applicazione non riuscita</string>
    <string name="toast_no_prof">Crea il tuo profilo!</string>
    <string name="err_everything_go_lazy">Qualcosa è andato storto</string>
    <string name="profile_dialog_title">Avviso</string>
    <string name="profile_dialog_delete_confirm_msg">Confermi l\'eliminazione del profilo?</string>
    <string name="profile_dialog_delete_deny_msg">Non è possibile cancellare il profilo in uso.</string>
    <string name="note_dialog_delete_msg">Confermi l\'eliminazione della nota?</string>
    <string name="note_dialog_delete_msg_multi">Confermi l\'eliminazione delle note?</string>
    <string name="note_add">Cosa vuoi ricordare?</string>
    <string name="no_notes">Non ci sono note</string>
    <string name="notifications_title">Domani a %s</string>
    <string name="profile_changed_by_intent">Profilo: %s</string>
    <string name="drawer_open">Rifiuti</string>
    <string name="drawer_close">Rifiuti</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_dove_butto">Dove lo butto?</string>
    <string name="drawer_punti_raccolta">Punti di raccolta</string>
    <string name="drawer_tipi_raccolta">Tipi di raccolta</string>
    <string name="drawer_tipi_rifiuti">Tipi di rifiuti</string>
    <string name="drawer_calendario">Calendario</string>
    <string name="drawer_note">Note</string>
    <string name="drawer_feedback">Segnala</string>
    <string name="drawer_contacts">Contatti</string>
    <string name="drawer_profilo">Gestione profili</string>
    <string name="drawer_tutorial">Tutorial</string>
    <string name="drawer_info">Info</string>
    <string name="home_pager_note">NOTE</string>
    <string name="home_pager_dovelobutto">DOVE LO BUTTO?</string>
    <string name="home_pager_calendario">CALENDARIO</string>
    <string name="dovelobutto_search_hint">Che rifiuto vuoi buttare?</string>
    <string name="notes_empty_title1">Tocca</string>
    <string name="notes_empty_title2">per aggiungere una nota</string>
    <string name="notes_empty_subtitle">ad esempio:\n\"Portare la tv al CRM\"\n\"Pagare la bolletta dei rifiuti\"</string>
    <string name="calendaragenda_empty_title">Non ci sono elementi</string>
    <string name="niente_profili">Aggiungi un nuovo profilo dal menu in alto!</string>
    <string name="profilo_nome">Nome del profilo</string>
    <string name="profilo_comune">Comune/Località</string>
    <string name="profilo_area">Area</string>
    <string name="profilo_utenza">Tipo di utenza</string>
    <string name="profilo_via">Via/Piazza/Viale</string>
    <string name="profilo_nciv">Numero Civico</string>
    <string name="profilo_nome_placeholder">casa/azienda/vacanza</string>
    <string name="profilo_comune_placeholder">Seleziona Comune/Località</string>
    <string name="profilo_area_placeholder">Area</string>
    <string name="profilo_via_placeholder">Via Verdi/Piazza Dante/&#8230;</string>
    <string name="profilo_nciv_placeholder">0</string>
    <string name="profilo_utenza_help_cd">Vedi le descrizioni delle tipologie di utenza</string>
    <string name="profilo_utenza_help_title">Tipologie di utenza</string>
    <string name="err_delete_profilo">Impossibile eliminare l\' ultimo profilo</string>
    <string name="err_gps_off">Accendi il gps se vuoi velocizzare il processo!</string>
    <string name="dialog_gps_title">Vuoi usare questa posizione?</string>
    <string name="dialog_gps_msg">%1$s %2$s, %3$s</string>
    <string name="err_unknown_area">Area specificata non è riconosciuta.</string>
    <string name="err_prof_name">Il nome del profilo è già in uso</string>
    <string name="profilo_utenza_PRIVATO">utenza domestica</string>
    <string name="profilo_utenza_OCCASIONALE">utenza occasionale</string>
    <string name="profilo_utenza_NONPRIVATO">utenza non domestica</string>
    <string-array name="utenze">
        <item>@string/profilo_utenza_PRIVATO</item>
        <item>@string/profilo_utenza_NONPRIVATO</item>
        <item>@string/profilo_utenza_OCCASIONALE</item>
    </string-array>
    <string name="action_settings">Configurazione</string>
    <string name="action_edit">Modifica</string>
    <string name="action_save">Salva</string>
    <string name="action_delete">Elimina</string>
    <string name="action_add">Aggiungi</string>
    <string name="rifiuti_container_listarifiuti">LISTA RIFIUTI</string>
    <string name="rifiuti_container_listapuntidiraccolta">PUNTI DI RACCOLTA</string>
    <string name="tipodiraccolta_label">Tipo di raccolta</string>
    <string name="puntodiraccolta_label">Punto di raccolta</string>
    <string name="action_list">Lista</string>
    <string name="action_map">Mappa</string>
    <string name="calendar_today">Vai a oggi</string>
    <string name="calendar_agenda">Vedi agenda</string>
    <string name="action_call">Chiama</string>
    <string name="action_goto">Vai</string>
    <string name="from_time_to_time">dalle %1$s alle %2$s</string>
    <string name="niente_tipi_raccolta">Nessun risultato trovato</string>
    <string name="pdr_non_trovato_toast">Punto di raccolta non trovato</string>
    <string name="puntoraccolta_list_item">%1$s - %2$s</string>
    <string name="puntoraccolta_empty">Nessun elemento da visualizzare</string>
    <string name="dettagli_label">DETTAGLI</string>
    <string name="orario_label">ORARIO</string>
    <string name="tipologiediraccolta_label">Tipologie di raccolta</string>
    <string name="direction_intent">eu.trentorise.smartcampus.jp.NAVIGATE</string>
    <string name="from_for_direction">from</string>
    <string name="to_for_direction">to</string>
    <string name="toast_app_not_installed">L\'applicazione richiesta non è stata trovata</string>
    <string name="puntiraccoltadetails_abtitle">%1$s</string>
    <string name="puntiraccoltadetails_absubtitle">%1$s %2$s</string>
    <string name="puntiraccoltadetails_orari">%1$s: %2$s-%3$s</string>
    <string name="puntiraccoltadetails_orari_2">, %1$s-%2$s</string>
    <string name="tipo_di_rifiuto_title">Tipo di rifiuto</string>
    <string name="tipo_di_raccolta_title">Tipo di raccolta</string>
    <string name="rifiuto_title">Rifiuto</string>
    <string name="punto_di_raccolta_title">Punto di raccolta</string>
    <string name="punti_di_raccolta_title">Punti di raccolta</string>
    <string name="tipi_di_raccolta_title">Tipo di raccolta</string>
    <string name="profili_title">Profili</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="informazioni_title">Informazioni</string>
    <string name="application_title">100% Riciclo - Giudicarie</string>
    <string name="feedback_title">Segnalazione</string>
    <string name="feedback_descr">Invia una email per segnalare un problema 
        direttamente all\'ente che si occupa della gestione dei rifiuti. Puoi 
        anche allegare una foto e le coordinate GPS della tua posizione.</string>
    <string name="feedback_text_hint">Inserisci qui il testo della segnalazione</string>
    <string name="feedback_photo_hint">Scatta una foto</string>
    <string name="feedback_gps_hint">Allega la tua posizione</string>
    <string name="feedback_send">Segnala!</string>
    <string name="feedback_subject">Segnalazione dalla app \"100% Riciclo - Giudicarie\"</string>
    <string name="feedback_capture">Image</string>
    <string name="feedback_mail">Seleziona l\'app per segnalazione</string>
    <string name="feedback_to">segnalazioni.rifiuti@comunitadellegiudicarie.it</string>
    <string name="contacts_container_institute">COMUNE</string>
    <string name="contacts_container_org">GESTORE</string>
    <string name="contacts_title">Contatti</string>
    <string name="contacts_descr_label">DESCRIZIONE</string>
    <string name="contacts_address_label">INDIRIZZO</string>
    <string name="contacts_contacts_label">CONTATTI</string>
    <string name="contacts_tel_ph">%s</string>
    <string name="contacts_email_ph">%s</string>
    <string name="contacts_web_ph">%s</string>
    <string name="contacts_pec_ph">%s (PEC)</string>
    <string name="contacts_fax_ph">%s</string>
    <string name="contacts_name_label">NOME</string>
    <string name="contacts_opening_label">ORARIO</string>
    <string name="home_title">Home</string>
    <string name="home_tut">testo 1</string>
    <string name="punti_raccolta_title">Punti di raccolta</string>
    <string name="punti_raccolta_tut">testo 2</string>
    <string name="tipi_raccolta_title">Tipi di raccolta</string>
    <string name="tipi_raccolta_tut">testo 3</string>
    <string name="gestione_profili_title">Gestione profili</string>
    <string name="gestione_profili_tut">testo 4</string>
    <string name="segnala_title">Segnala</string>
    <string name="segnala_tut">testo 5</string>
    <string name="contatti_title">Contatti</string>
    <string name="contatti_tut">testo 6</string>
    <string name="tutorial_tut">testo 7</string>
    <string name="info_title">Info</string>
    <string name="info_tut">testo 8</string>
    <string name="tipologia_raccolta_ext">%1$s: %2$s</string>
    <string name="tut_dove_title_search">Benvenuto!</string>
    <string name="tut_dove_desc_search">Benvenuto! Questo tutorial mostra il funzionamento della app.\nPer scoprire dove buttare uno specifico rifiuto, scrivi il nome qui e premi sulla lente di ingrandimento.</string>
    <string name="tut_dove_title_kind">Tipologie di rifiuto</string>
    <string name="tut_dove_desc_kind">Scopri quali rifiuti appartengono ad una determinata categoria e scopri dove devono essere conferiti.</string>
    <string name="tut_dove_title_notes">Note</string>
    <string name="tut_dove_desc_notes">Aggiungi delle note personali o dei pro-memoria legati alla gestione dei rifiuti (e.g. pagamento della bolletta, oggetti da portare al CRM, etc).</string>
    <string name="tut_dove_title_cal">Calendario</string>
    <string name="tut_dove_desc_cal">Controlla cosa succede oggi o in un qualsiasi altro giorno: quale tipologia di porta a porta è prevista e quali CRM sono aperti.</string>
    <string name="tut_dove_title_menu">Menù laterale</string>
    <string name="tut_dove_desc_menu">Premi qui per aprire il menù laterale e scoprire ulteriori funzionalità.</string>
    <string name="info_credits">Credits</string>
    <string name="info_intro">100% Riciclo - Giudicarie</string>
    <string name="info_subtitle">Tutto quello che devi sapere sulla raccolta differenziata nel tuo Comune</string>
    <string name="info_project">Un progetto di:</string>
    <string name="info_collab">In collaborazione con:</string>
    <string name="info_cdc">CDC</string>
    <string name="info_giudicarie">Comunità delle giudicarie\nhttp://www.comunitadellegiudicarie.it/</string>
    <string name="info_ladurner">Ladurner Energy\nwww.ladurnerambiente.it</string>
    <string name="info_fbk">fbk</string>
    <string name="info_mail">Per informazioni:\nriciclo@smartcampuslab.it</string>
    <string name="info_feedback"></string>
    <string name="geocoding">Ricerca della posizione&#8230;</string>
    <string name="distance">%.2f km</string>
    <string name="confirm_exit">Sei sicuro di voler uscire dall\'app?</string>
    <string name="version">v %s</string>
</resources>